5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1715_3032.log
== TEST (2019-05-02 16:26:01) 
-- CODE:
from math import abs()
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**1/2
	print(round(funcao ,4))
elif(X>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- ERROR:
File "XXXX", line 1
    from math import abs()
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:09) 
-- CODE:
from math import abs
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**1/2
	print(round(funcao ,4))
elif(X>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import abs
ImportError: cannot import name 'abs'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:23) 
-- CODE:
from math import abs()
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**1/2
	print(round(funcao ,4))
elif(X>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- ERROR:
File "XXXX", line 1
    from math import abs()
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:42) 
-- CODE:
import math
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**1/2
	print(round(funcao ,4))
elif(X>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:12) 
-- CODE:
import math
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**(1/2)
	print(round(funcao ,4))
elif(X>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:19) 
-- CODE:
import math
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**(1/2)
	print(round(funcao ,4))
elif(X>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:29) 
-- CODE:
import math
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**(1/2)
	print(round(funcao ,4))
elif(x>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:36) 
-- CODE:
import math
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**(1/2)
	print(round(funcao ,4))
elif(x>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:41) 
-- CODE:
import math
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**(1/2)
	print(round(funcao ,4))
elif(x>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:45) 
-- CODE:
import math
x=float(input("Valor de x: "))
if(x<=0):
	funcao=0
	print(funcao)
elif((x>0)and(x<=1)):
	funcao=1
	print(funcao)
elif((x>1)and(x<=2)):
	funcao=x**(1/2)
	print(round(funcao ,4))
elif(x>2):
	funcao=x**(1/3)
	print(round(funcao, 4))
-- EXECUTION TIME:
0.237468
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4107
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
